src/yini_test/cases/golden/lenient/valid/sections/single-top-level-section.yini
@yini

^ Application
name = "section-single"
enabled = true
environment = "development"
