src/yini_test/cases/golden/lenient/invalid/parser-mode/yini-unknown-in-lenient-mode.yini
@yini relaxed

^ App
name = "yini-unknown-in-lenient-mode"
mode = "lenient"
enabled = true
